update tags style bug #41, add letter-spacing css to head/foot/hubs

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9419,3 +9419,6 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   width:160px;
   margin-top: -3px;
 }
+.space-small{
+  letter-spacing: 0.5px;
+}
